Feature: JSON Schema for frontend-token-definition.json

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -29,6 +29,7 @@
         <ul>
             <li>Feature: Added support for Liferay 7.4</li>
             <li>Feature: Code Completion and documentation for portal.properties files</li>
+            <li>Feature: JSON Schema for frontend-token-definition.json</li>
         </ul>
         <p>Version 0.0.11</p>
         <ul>
