--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -30,6 +30,7 @@
             <li>Feature: Added support for Liferay 7.4</li>
             <li>Feature: Code Completion and documentation for portal.properties files</li>
             <li>Feature: JSON Schema for frontend-token-definition.json</li>
+            <li>Feature: Clay SCSS Variables documentation</li>
         </ul>
         <p>Version 0.0.11</p>
         <ul>
