--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -33,6 +33,7 @@
             <li>Feature: Language.properties references for label attributes in frontend-token-definition.json</li>
             <li>Feature: Clay SCSS Variables documentation</li>
             <li>Feature: Added support for portlet-display-templates.xml (XML Schema and file references)</li>
+            <li>Feature: Added support for new journal structure json schema (for Liferay 7.4)</li>
             <li>Bugfix: Fixed detecting the bundles directory from the bundle-support maven plugin</li>
         </ul>
         <p>Version 0.0.11</p>
