--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -6,7 +6,7 @@
 
     <vendor email="Dominik.Marks@gmx.de" url="https://github.com/dmarks2">Dominik Marks</vendor>
 
-    <idea-version since-build="210" />
+    <idea-version since-build="212" />
 
     <description><![CDATA[
         <p>This plugin adds some features for developing Liferay modules. The following topics have been improved so far</p>
@@ -35,6 +35,7 @@
             <li>Feature: Added support for portlet-display-templates.xml (XML Schema and file references)</li>
             <li>Feature: Added support for new journal structure json schema (for Liferay 7.4)</li>
             <li>Bugfix: Fixed detecting the bundles directory from the bundle-support maven plugin</li>
+            <li>Change: Fixed support for IntelliJ 2021.2, dropped support for IntelliJ 2021.1 and lower</li>
         </ul>
         <p>Version 0.0.11</p>
         <ul>
