--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -32,6 +32,7 @@
             <li>Feature: Resolve Files and Layout entries in Resources Importer Template files</li>
             <li>Feature: Inject SQL language into custom-sql definition files</li>
             <li>Bugfix: Exception when trying to inject Javascript inside aui:script-tags containing additonal attributes (like "use" or "require")</li>
+            <li>Change: Fixed support for IntelliJ 2021.3</li>
         </ul>
         <p>Version 0.0.12</p>
         <ul>
