--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ buildscript {
 
 
 plugins {
-    id "org.jetbrains.intellij" version "1.1.4"
+    id "org.jetbrains.intellij" version "1.3.0"
     id 'de.undercouch.download' version '4.1.2'
 }
 
@@ -31,6 +31,8 @@ test {
         exceptionFormat = 'full'
     }
     systemProperty "idea.home.path", mockDir
+    scanForTestClasses false
+    include "**/*Test.class"
 }
 
 sourceSets {
