--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -33,6 +33,7 @@
             <li>Feature: Inject SQL language into custom-sql definition files</li>
             <li>Feature: OSGi component properties for Fragment components</li>
             <li>Bugfix: Exception when trying to inject Javascript inside aui:script-tags containing additonal attributes (like "use" or "require")</li>
+            <li>Bugfix: Avoid NullPointerException when trying to lookup documentation for an unknown OSGi property</li>
             <li>Change: Fixed support for IntelliJ 2021.3</li>
         </ul>
         <p>Version 0.0.12</p>
