--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -32,6 +32,7 @@
             <li>Feature: Resolve Files and Layout entries in Resources Importer Template files</li>
             <li>Feature: Inject SQL language into custom-sql definition files</li>
             <li>Feature: OSGi component properties for Fragment components</li>
+            <li>Feature: Add support for custom fragment html tags and attributes</li>
             <li>Bugfix: Exception when trying to inject Javascript inside aui:script-tags containing additonal attributes (like "use" or "require")</li>
             <li>Bugfix: Avoid NullPointerException when trying to lookup documentation for an unknown OSGi property</li>
             <li>Change: Fixed support for IntelliJ 2021.3</li>
