--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,14 @@
+buildscript {
+    repositories {
+        maven { url "https://cache-redirector.jetbrains.com/intellij-dependencies" }
+        maven { url "https://cache-redirector.jetbrains.com/repo1.maven.org/maven2" }
+        maven { url "https://plugins.gradle.org/m2" }
+    }
+}
+
 plugins {
     id "org.jetbrains.intellij" version "1.3.0"
     id 'de.undercouch.download' version '4.1.2'
-}
-
-repositories {
-    maven("https://cache-redirector.jetbrains.com/intellij-dependencies")
-    maven("https://cache-redirector.jetbrains.com/repo1.maven.org/maven2")
-    maven("https://plugins.gradle.org/m2")
 }
 
 import de.undercouch.gradle.tasks.download.Download
