--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -35,6 +35,7 @@
             <li>Feature: Add support for custom fragment html tags and attributes</li>
             <li>Feature: Add JSON schemas for several fragment related files</li>
             <li>Feature: Add freemarker support for fragment html files</li>
+            <li>Feature: File references in fragment.json file</li>
             <li>Bugfix: Exception when trying to inject Javascript inside aui:script-tags containing additonal attributes (like "use" or "require")</li>
             <li>Bugfix: Avoid NullPointerException when trying to lookup documentation for an unknown OSGi property</li>
             <li>Change: Fixed support for IntelliJ 2021.3</li>
