--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -36,6 +36,7 @@
             <li>Feature: Add JSON schemas for several fragment related files</li>
             <li>Feature: Add freemarker support for fragment html files</li>
             <li>Feature: File references in fragment.json file</li>
+            <li>Feature: Add support for comments in bnd.bnd files</li>
             <li>Bugfix: Exception when trying to inject Javascript inside aui:script-tags containing additonal attributes (like "use" or "require")</li>
             <li>Bugfix: Avoid NullPointerException when trying to lookup documentation for an unknown OSGi property</li>
             <li>Change: Fixed support for IntelliJ 2021.3</li>
@@ -196,6 +197,7 @@
         <fileType name="bnd" implementationClass="de.dm.intellij.bndtools.BndFileType" fieldName="INSTANCE" language="bnd" extensions="bnd"/>
         <lang.parserDefinition language="bnd" implementationClass="de.dm.intellij.bndtools.parser.BndParserDefinition"/>
         <lang.syntaxHighlighterFactory language="bnd" implementationClass="de.dm.intellij.bndtools.highlighting.BndSyntaxHighlighterFactory"/>
+        <lang.commenter language="bnd" implementationClass="de.dm.intellij.bndtools.commenter.BndCommenter" />
         <annotator language="bnd" implementationClass="de.dm.intellij.bndtools.BndHighlightingAnnotator"/>
         <completion.contributor language="bnd" implementationClass="de.dm.intellij.bndtools.completion.BndCompletionContributor"/>
         <enterHandlerDelegate implementation="de.dm.intellij.bndtools.actions.EnterInBndFileHandler"/>
