--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -2,7 +2,7 @@
     <id>de.dm.intellij.liferay</id>
     <name>Liferay</name>
     <category>Framework integration</category>
-    <version>0.0.13</version>
+    <version>0.0.14</version>
 
     <vendor email="Dominik.Marks@gmx.de" url="https://github.com/dmarks2">Dominik Marks</vendor>
 
@@ -25,6 +25,8 @@
       ]]></description>
 
     <change-notes><![CDATA[
+        <p>Version 0.0.14</p>
+
         <p>Version 0.0.13</p>
         <ul>
             <li>Feature: Language injections for script and templat tags in Liferay workflow definition files</li>
