--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ buildscript {
 }
 
 plugins {
-    id "org.jetbrains.intellij" version "1.3.0"
+    id "org.jetbrains.intellij" version "1.5.2"
     id 'de.undercouch.download' version '4.1.2'
 }
 
@@ -78,7 +78,8 @@ intellij {
 //    version "IU-2020.3"
 //    version.set("IU-2021.1")
 //    version.set("IU-2021.2")
-    version.set("IU-2021.3")
+//    version.set("IU-2021.3")
+    version.set("IU-2022.1")
     type.set('IU')
     pluginName.set('Liferay IntelliJ Plugin')
     plugins.set([
