--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -28,7 +28,7 @@
         <p>Version 0.0.14</p>
         <ul>
             <li>Feature: Resolve Resource Bundles</li>
-            <li>Feature: Define Journal Structures based on Data Engine Definition schema (Liferay 7.4 only)</li>
+            <li>Feature: Support for Journal Structures based on Data Engine Definition schema (Liferay 7.4 only)</li>
             <li>Feature: Implicit usage of constructors in OSGi components (e.g. ServiceWrappers)</li>
             <li>Change: Update support for IntelliJ 2022.1</li>
             <li>Bugfix: ClassCastException during code completions in an empty frontend-token-definition.json file</li>
