--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -30,6 +30,7 @@
             <li>Feature: Resolve Resource Bundles</li>
             <li>Feature: Support for Journal Structures based on Data Engine Definition schema (Liferay 7.4 only)</li>
             <li>Feature: Implicit usage of constructors in OSGi components (e.g. ServiceWrappers)</li>
+            <li>Feature: Resolve known Freemarker context variables in Fragment HTML files</li>
             <li>Change: Update support for IntelliJ 2022.1</li>
             <li>Bugfix: ClassCastException during code completions in an empty frontend-token-definition.json file</li>
             <li>Bugfix: description tag inside notification of a workflow definition supports Freemarker, too</li>
