Update gradle plugin, fix gradle deprecations

--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ buildscript {
 }
 
 plugins {
-    id "org.jetbrains.intellij" version "1.5.2"
+    id "org.jetbrains.intellij" version "1.6.0"
     id 'de.undercouch.download' version '4.1.2'
 }
 
@@ -54,19 +54,19 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.11'
+    testImplementation group: 'junit', name: 'junit', version: '4.11'
     //compileOnly 'org.jetbrains.plugins:maven-server-api:2016.3'
     compileOnly 'com.github.adedayo.intellij.sdk:maven-server-api:142.1'
-    compile 'org.glassfish:javax.json:1.1'
+    implementation 'org.glassfish:javax.json:1.1'
 //    compile files(org.gradle.internal.jvm.Jvm.current().toolsJar)
-    compile 'org.freemarker:freemarker:2.3.28'
+    implementation 'org.freemarker:freemarker:2.3.28'
 
-    compile 'org.glassfish.jersey.core:jersey-client:2.26'
-    compile 'org.glassfish.jersey.media:jersey-media-multipart:2.26'
-    compile 'org.glassfish.jersey.media:jersey-media-json-jackson:2.26'
-    compile 'org.glassfish.jersey.inject:jersey-hk2:2.26'
-    compile 'com.fasterxml.jackson.datatype:jackson-datatype-json-org:2.9.0'
-    compile 'org.json:json:20171018'
+    implementation 'org.glassfish.jersey.core:jersey-client:2.26'
+    implementation 'org.glassfish.jersey.media:jersey-media-multipart:2.26'
+    implementation 'org.glassfish.jersey.media:jersey-media-json-jackson:2.26'
+    implementation 'org.glassfish.jersey.inject:jersey-hk2:2.26'
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-json-org:2.9.0'
+    implementation 'org.json:json:20171018'
 }
 
 intellij {
