Feature: JavaScript support for liferay-look-and-feel.xml

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -33,6 +33,7 @@
             <li>Feature: Resolve known Freemarker context variables in Fragment HTML files</li>
             <li>Feature: Add support for Freemarker debugger in Liferay 7.4</li>
             <li>Feature: Ability to use Freemarker debugger for Modules based on direct service calls to Advanced Resources Importer</li>
+            <li>Feature: JavaScript support for liferay-look-and-feel.xml</li>
             <li>Change: Update support for IntelliJ 2022.1</li>
             <li>Bugfix: ClassCastException during code completions in an empty frontend-token-definition.json file</li>
             <li>Bugfix: description tag inside notification of a workflow definition supports Freemarker, too</li>
